--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 # Site wide configuration
 
-title: Site Title
+title: Vincent Pham
 locale: en_US
-description: Describe your website here.
+description: "Data Scientist"
 logo: site-logo.png
 search: true
-url: http://vincentpham1991.github.io
+#url: http://vincentpham1991.github.io
+url: http://localhost:4000
 
 # Jekyll configuration
 
@@ -48,15 +49,15 @@ titlecase: true
 
 # Site owner
 owner:
-  name: Your Name
-  avatar: bio-photo.jpg
-  email: you@email.com
+  name: Vincent Pham
+  avatar: msan-student-vincent-pham.jpg
+  email: vincent.pham@gmail.com
   disqus-shortname:
   twitter: #username
   facebook: #username
-  github: #username
+  github: vincentpham1991
   stackexchange: #http://stackoverflow.com/users/123456/username
-  linkedin: #username
+  linkedin: vincentpham1991
   instagram: #username
   flickr: #username
   tumblr: #username
