--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ locale: en_US
 description: "Data Scientist"
 logo: site-logo.png
 search: true
-#url: http://vincentpham1991.github.io
-url: http://localhost:4000
+url: http://vincentpham1991.github.io
+#url: http://localhost:4000
 
 # Jekyll configuration
 
