--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Vincent Pham
 locale: en_US
 description: "Data Scientist"
-logo: site-logo-v2.PNG
+logo: site-logo-v3.png
 logo2: msan-student-vincent-pham.jpg
 search: true
 url: http://vincentpham1991.github.io
