--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,11 @@
 - title: Visualizations
   url: /visualizations/
 
+- title: Deep Learning
+  url: /deep_learning/
+
 - title: Search
   url: /search/
+
 
 
