--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,9 @@
 - title: Deep Learning
   url: /deep_learning/
 
+- title: Conference Talks
+  url: /conference_talks/
+
 - title: Search
   url: /search/
 
